2007-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cus-dep.el (custom-make-dependencies): Simplify.

	* composite.el (compose-region, decompose-region):
	Use inhibit-read-only and restore-buffer-modified-p.

	* xt-mouse.el (xterm-mouse-truncate-wrap): New function.
	(xterm-mouse-event): Use it.

2007-05-25  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-cycle-previous): Don't modify the cycle list until
	`switch-to-buffer' has returned succesfully.
	(bs-cycle-next): Ditto.  Also, don't bury the buffer when the
	window is dedicated (it could iconify the frame).

2007-05-25  Miles Bader  <miles@fencepost.gnu.org>

	* vc-hooks.el (vc-find-root): Fix file attribute test.

2007-05-24  Richard Stallman  <rms@gnu.org>

	* textmodes/flyspell.el (flyspell-correct-word-before-point):
	Don't let opoint be nil.
	(flyspell-emacs-popup): Explicit error if no dialogs.

2007-05-24  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-forward-hscroll, image-backward-hscroll)
	(image-next-line, image-previous-line, image-scroll-up)
	(image-scroll-down, image-bol, image-eol, image-bob, image-eob):
	New functions.
	(image-mode-map): Remap motion commands.
	(image-mode-text-map): New keymap for viewing images as text.
	(image-mode): Use image-mode-map.
	(image-toggle-display): Toggle auto-hscroll-mode and mode keymaps.

2007-05-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el (canonically-space-region): Make the second arg
	a marker if it's not already the case.

2007-05-23  Eli Zaretskii  <eliz@gnu.org>

	* tar-mode.el (tar-header-block-summarize, tar-summarize-buffer)
	(tar-get-descriptor): Handle type 55, an extended pax header.

2007-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autoinsert.el (auto-insert-alist): Quote elisp sample code so as not
	to confuse outline-minor-mode.

2007-05-23  Eli Zaretskii  <eliz@gnu.org>

	* tar-mode.el (tar-file-name-handler): New function.